<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Reader</string>
    <string name="main_home">首页</string>
    <string name="main_news">信息</string>
    <string name="main_my_info">我的资料</string>
    <string name="menu_search">搜索</string>
    <string name="more">更多</string>
    <string name="back">返回</string>
    <string name="refresh">刷新</string>
    <string name="account_regedit">注册</string>
</resources>
